fixes path to data file

--- a/experiments/transformer_generation.ipynb
+++ b/experiments/transformer_generation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 593,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 594,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 595,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 596,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 597,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 598,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,16 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 601,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/test/small.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/0s/n2h82mgn247_9xz7jbz3w97c0000gn/T/ipykernel_65044/2709125095.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprompts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreferences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_prompts_and_references\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data/test/small.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/0s/n2h82mgn247_9xz7jbz3w97c0000gn/T/ipykernel_65044/2732345666.py\u001b[0m in \u001b[0;36mextract_prompts_and_references\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mreferences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/test/small.txt'"
+     ]
+    }
+   ],
    "source": [
-    "prompts, references = extract_prompts_and_references(\"data/test/small.txt\")"
+    "prompts, references = extract_prompts_and_references(\"data/test/isolezwe.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
